added uploading of the rules
